--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "@testing-library/user-event": "^12.8.3",
         "apexcharts": "^3.26.1",
         "clsx": "^1.1.1",
+        "filepond-plugin-file-rename": "^1.1.8",
+        "filepond-plugin-file-validate-type": "^1.2.8",
+        "filepond-plugin-image-exif-orientation": "^1.0.11",
+        "filepond-plugin-image-preview": "^4.6.11",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
@@ -28,6 +32,7 @@
         "react-apexcharts": "^1.3.7",
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
+        "react-filepond": "^7.1.2",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.3",
         "react-router": "6.0.0-beta.0",
