--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
         "@mui/system": "^5.0.3",
         "@mui/utils": "^5.0.1",
         "@mui/x-data-grid": "^5.0.0-beta.3",
+        "@reduxjs/toolkit": "^1.8.1",
         "@tabler/icons": "^1.39.1",
         "@testing-library/jest-dom": "^5.11.10",
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
         "apexcharts": "^3.26.1",
+        "axios": "^0.27.2",
         "clsx": "^1.1.1",
         "filepond-plugin-file-rename": "^1.1.8",
         "filepond-plugin-file-validate-type": "^1.2.8",
@@ -38,7 +40,7 @@
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "6.0.0-beta.0",
         "react-scripts": "^4.0.3",
-        "redux": "^4.0.5",
+        "redux-thunk": "^2.4.1",
         "yup": "^0.32.9"
     },
     "scripts": {
