--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "apexcharts": "^3.26.1",
         "axios": "^0.27.2",
         "clsx": "^1.1.1",
+        "draft-js": "^0.11.7",
         "filepond-plugin-file-rename": "^1.1.8",
         "filepond-plugin-file-validate-type": "^1.2.8",
         "filepond-plugin-image-exif-orientation": "^1.0.11",
@@ -34,6 +35,7 @@
         "react-apexcharts": "^1.3.7",
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
+        "react-draft-wysiwyg": "^1.14.7",
         "react-filepond": "^7.1.2",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.3",
